--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {bg: linear-gradient(to bottom, #666699 0%, #669999 100%);}
   width: 150px;
   height: 50px;
   border: none;
-  background-color: #ff0000;
+  background-color: #000000;
   color: #fff;
   font-family:Georgia;
   font-size: 20px;
@@ -130,7 +130,7 @@ h1{
     height: 50px;
     line-height: 47px;
     padding: 0 25px 0 10px;
-    background: #ff0000;
+    background: #000000;
     font-size: 18px;
     color: #fff;
     position: relative;
